# ros2_ws_nichols_wilson

./: .gitignore  README.md  README_ANSWERS.md  frames_2025-11-07_19.32.48.gv
install/: local_setup.sh  setup.sh
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/: reset_position.h  reset_position.hpp
install/custom_interfaces/include/custom_interfaces/custom_interfaces/srv/detail/: reset_position__builder.hpp  reset_position__functions.c  reset_position__functions.h  reset_position__rosidl_typesupport_fastrtps_c.h  reset_position__rosidl_typesupport_fastrtps_cpp.hpp  reset_position__rosidl_typesupport_introspection_c.h  reset_position__rosidl_typesupport_introspection_cpp.hpp  reset_position__struct.h  reset_position__struct.hpp  reset_position__traits.hpp  reset_position__type_support.c  reset_position__type_support.cpp  reset_position__type_support.h  reset_position__type_support.hpp
install/custom_interfaces/share/ament_index/resource_index/package_run_dependencies/: custom_interfaces
install/custom_interfaces/share/ament_index/resource_index/rosidl_interfaces/: custom_interfaces
install/custom_interfaces/share/custom_interfaces/: local_setup.sh  package.sh
install/custom_interfaces/share/custom_interfaces/cmake/: rosidl_cmake-extras.cmake
install/custom_interfaces/share/custom_interfaces/srv/: ResetPosition.idl  ResetPosition.srv  ResetPosition_Request.msg  ResetPosition_Response.msg
install/robot_bringup/share/ament_index/resource_index/package_run_dependencies/: robot_bringup
install/robot_bringup/share/robot_bringup/: local_setup.sh  package.sh  package.xml
install/robot_bringup/share/robot_bringup/launch/: robot_sim.launch.py
install/robot_bringup/share/robot_bringup/rviz/: sim.rviz
install/robot_simulator_cpp/share/ament_index/resource_index/package_run_dependencies/: robot_simulator_cpp
install/robot_simulator_cpp/share/ament_index/resource_index/parent_prefix_path/: robot_simulator_cpp
install/robot_simulator_cpp/share/robot_simulator_cpp/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_simulator_cpp/share/robot_simulator_cpp/cmake/: robot_simulator_cppConfig.cmake
install/robot_simulator_py/share/robot_simulator_py/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/custom_interfaces/: CMakeLists.txt  package.xml
src/robot_bringup/: CMakeLists.txt  package.xml
src/robot_bringup/launch/: robot_sim.launch.py
src/robot_bringup/urdf/: robot.urdf
src/robot_simulator_cpp/: CMakeLists.txt  package.xml
src/robot_simulator_cpp/src/: odometry_node.cpp
src/robot_simulator_py/: package.xml  setup.cfg  setup.py
src/robot_simulator_py/robot_simulator_py/: controller_node.py
